# sval-generic

./: Cargo.toml  README.md
.github/workflows/: buffer.yml  dynamic.yml  fmt.yml  json.yml  serde.yml  sval.yml
benches/: digits.rs  tag.rs
buffer/: Cargo.toml
buffer/src/: fragments.rs  lib.rs  num.rs  value.rs
coroutine/: Cargo.toml
coroutine/src/: co.rs  impls.rs  lib.rs  value.rs
derive/: Cargo.toml
derive/src/: attr.rs  coroutine.rs  generator.rs  lib.rs  source.rs  value.rs
derive/tests/: Cargo.toml
derive/tests/src/: lib.rs
derive/tests/src/compile_pass/enum/: basic.rs  const.rs  const_value.rs  const_variant.rs  newtype.rs  struct.rs  tuple.rs
derive/tests/src/compile_pass/struct/: basic.rs
derive/tests/src/compile_pass/tuple/: basic.rs  newtype.rs
dynamic/: Cargo.toml
dynamic/src/: lib.rs  stream.rs  value.rs
erased/: Cargo.toml
erased/src/: lib.rs  receiver.rs  source.rs  value.rs
examples/: stream-simple.rs  stream_simple.rs
examples/browser/: Cargo.toml  index.html  run.ps1
examples/browser/src/: lib.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/stream-simple/: Cargo.toml  main.rs
experiments/: Cargo.toml
experiments/src/: json.rs
experiments/src/json/: from_slice.rs
fmt/: Cargo.toml
fmt/src/: lib.rs  to_debug.rs  to_fmt.rs  to_string.rs  writer.rs
fmt/test/: Cargo.toml  lib.rs
fmt/tests/: Cargo.toml  lib.rs
js/: Cargo.toml
js/src/: lib.rs
json/: Cargo.toml
json/benches/profile/: Cargo.toml  main.rs
json/benches/profile/src/: main.rs
json/benches/twitter/: Cargo.toml  lib.rs
json/src/: alloc_support.rs  error.rs  fmt.rs  from_slice.rs  from_slice_co.rs  lib.rs  slice.rs  std_support.rs  to_fmt.rs  to_string.rs  to_writer.rs
json/test/: Cargo.toml  lib.rs
json/tests/: Cargo.toml  lib.rs
json/tests/twitter/: Cargo.toml  lib.rs  mini-twitter.json
serde/: Cargo.toml
serde/src/: lib.rs  to_serialize.rs  to_value.rs
serde/test/: Cargo.toml  lib.rs
src/: buffer.rs  coroutine.rs  data.rs  digits.rs  erased.rs  error.rs  fixed_size.rs  fmt.rs  for_all.rs  generator.rs  impls.rs  lib.rs  main.rs  num.rs  receiver.rs  reference.rs  result.rs  serde.rs  source.rs  stream.rs  tag.rs  valuable.rs  value.rs  value_ref.rs
src/coroutine/: internal.rs
src/data/: binary.rs  bytes.rs  computed.rs  digits.rs  dynamic.rs  error.rs  for_all.rs  map.rs  nullable.rs  number.rs  option.rs  optional.rs  seq.rs  tag.rs  text.rs
src/generator/: internal.rs
src/impls/: bytes.rs  digits.rs  error.rs  str.rs
src/receiver/: blocking.rs  non_blocking.rs
src/source/: non_blocking.rs  source_ref.rs  source_value.rs
test/: Cargo.toml
test/src/: lib.rs  permute.rs  some.rs
typeck/: Cargo.toml
typeck/src/: eval.rs  lib.rs  main.rs  tests.rs
valuable/: Cargo.toml
valuable/src/: lib.rs
