[package]
name = "sval"
version = "0.0.0"
edition = "2021"

[workspace]
members = [
    "derive",
    "derive/tests",
    "dynamic",
    "test",
    "buffer",
    "serde",
    "fmt",
    "fmt/tests",
    "json",
    "json/benches/twitter",
    "json/benches/profile",
    "json/tests",
    "json/tests/twitter",
    "examples/stream-simple",
]

[features]
std = ["alloc"]
alloc = []

[profile.release]
debug = true
opt-level = 3
lto = "fat"
codegen-units = 1
