[package]
name = "sval"
version = "0.0.0"
edition = "2021"

[workspace]
members = [
    "derive",
    "derive/tests",
    "dynamic",
    "test",
    "fmt",
    "fmt/tests",
    "json",
    "examples/stream-simple",
]

[features]
std = ["alloc"]
alloc = []

[profile.release]
debug = true
opt-level = 3
lto = "fat"
codegen-units = 1
