[package]
name = "sval"
version = "0.0.0"
edition = "2021"

[workspace]
members = [
    "derive",
    "dynamic",
    "fmt",
    "fmt/test",
    "buffer",
    "serde",
    "serde/test",
    "json",
    "json/test",
    "experiments",
]

[features]
default = ["derive"]
std = ["alloc"]
alloc = []
derive = ["dep:sval-derive"]

[dependencies.sval-derive]
path = "./derive"
optional = true

[profile.release]
debug = true
opt-level = 3
lto = "fat"
codegen-units = 1
