[package]
name = "sval-buffer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sval]
path = "../"
features = ["std"]

[dependencies.num-traits]
version = "~0.2"

[dependencies.num-bigint]
version = "~0.4"
