[package]
name = "sval_buffer"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_buffer"
description = "Value buffering for sval"
repository = "https://github.com/sval-rs/sval"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[features]
std = ["alloc"]
alloc = ["sval/alloc"]

[dependencies.sval]
path = "../"

[dev-dependencies.sval_derive]
path = "../derive"
