[package]
name = "sval-fmt"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval-fmt"
description = "Integration between std::fmt::Debug and sval::Value"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[features]
std = ["alloc"]
alloc = ["sval/alloc"]

[dependencies.sval]
path = "../"

[dependencies.ryu]
version = "1"

[dependencies.itoa]
version = "0.4"
features = ["i128"]
default-features = false
