[package]
name = "sval-json"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval-json"
description = "JSON support for sval"
repository = "https://github.com/sval-rs/sval"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[features]
std = ["alloc"]
alloc = ["sval/alloc"]

[dependencies.sval]
path = "../"

[dependencies.ryu]
version = "1"

[dependencies.itoa]
version = "0.4"
features = ["i128"]
default-features = false
