[package]
name = "sval-serde"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sval]
path = "../"

[dependencies.sval-buffer]
path = "../buffer"

[dependencies.serde]
version = "1"
default-features = false
