[package]
name = "sval-serde"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval-serde"
description = "Integration between serde::Serialize and sval::Value"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[features]
std = ["alloc"]
alloc = ["serde/alloc", "sval/alloc", "sval-buffer/alloc"]

[dependencies.sval]
path = "../"

[dependencies.sval-buffer]
path = "../buffer"

[dependencies.serde]
version = "1"
default-features = false
