[package]
name = "sval-generic-api-valuable"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
publish = false

[dependencies.sval-generic-api]
path = "../"

[dependencies.sval-generic-api-buffer]
path = "../buffer"

[dependencies.valuable]
git = "https://github.com/tokio-rs/valuable"
branch = "taiki-e/json"
