[package]
name = "sval-valuable"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
publish = false

[dependencies.sval]
path = "../"

[dependencies.sval-buffer]
path = "../buffer"

[dependencies.valuable]
git = "https://github.com/tokio-rs/valuable"
branch = "taiki-e/json"
