[package]
name = "sval-json-tests"
version = "0.0.0"
publish = false
edition = "2021"

[lib]
path = "lib.rs"

[dependencies.sval-derive]
path = "../../derive"

[dependencies.sval]
path = "../../"

[dependencies.sval-json]
path = "../"
features = ["alloc"]

[dependencies.serde_derive]
version = "1"

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"
