[package]
name = "sval-json-twitter-profile"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
publish = false

[dependencies.serde_json]
version = "1"

[dependencies.sval]
path = "../../../"

[dependencies.sval-serde]
path = "../../../serde"

[dependencies.sval-valuable]
path = "../../../valuable"

[dependencies.sval-json-twitter-tests]
path = "../../tests/twitter"

[dependencies.sval-json]
path = "../../"
