[package]
name = "sval-generic-api-json-twitter-benches"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies.sval-generic-api-json-twitter-tests]
path = "../../tests/twitter"

[dependencies.sval-generic-api]
path = "../../../"

[dependencies.sval-generic-api-json]
path = "../../"

[dependencies.sval_json]
path = "../../../../../../dev/osx/sval/json"
features = ["std"]

[dependencies.serde_json]
version = "1"

[dependencies.miniserde]
version = "0.1"

[dependencies.erased-serde]
version = "0.3"

[dependencies.valuable-json]
git = "https://github.com/tokio-rs/valuable"
branch = "taiki-e/json"
