[package]
name = "sval-json-twitter-benches"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies.sval-json-twitter-tests]
path = "../../tests/twitter"

[dependencies.sval-erased]
path = "../../../erased"

[dependencies.sval]
path = "../../../"

[dependencies.sval-json]
path = "../../"

[dependencies.serde_json]
version = "1"

[dependencies.miniserde]
version = "0.1"

[dependencies.erased-serde]
version = "0.3"

[dependencies.valuable-json]
git = "https://github.com/tokio-rs/valuable"
branch = "taiki-e/json"
