[package]
name = "sval-generic-api-json-twitter-tests"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies.sval-generic-api]
path = "../../../"
features = ["derive"]

[dependencies.sval-generic-api-json]
path = "../../"

[dependencies.sval-generic-api-serde]
path = "../../../serde"

[dependencies.sval-generic-api-valuable]
path = "../../../valuable"

[dependencies.sval-generic-api-fmt]
path = "../../../fmt"

[dependencies.sval-generic-api-erased]
path = "../../../erased"

[dependencies.sval-generic-api-coroutine]
path = "../../../coroutine"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.miniserde]
version = "0.1"

[dependencies.valuable]
git = "https://github.com/tokio-rs/valuable"
branch = "taiki-e/json"
features = ["derive"]

[dependencies.valuable-json]
git = "https://github.com/tokio-rs/valuable"
branch = "taiki-e/json"
