[package]
name = "sval-json-twitter-tests"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies.sval]
path = "../../../"

[dependencies.sval-derive]
path = "../../../derive"

[dependencies.sval-json]
path = "../../"
features = ["alloc"]

[dependencies.sval-erased]
path = "../../../erased"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.miniserde]
version = "0.1"

[dependencies.valuable]
git = "https://github.com/tokio-rs/valuable"
branch = "taiki-e/json"
features = ["derive"]

[dependencies.valuable-json]
git = "https://github.com/tokio-rs/valuable"
branch = "taiki-e/json"
